plugins/formal-verification/testData/diagnostics/no_contracts/full_viper_dump.kt
fun <!VIPER_TEXT!>f<!>() {}